--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -1,9 +1,19 @@
 \section{Introduction}
-The paradigm of \emph{reduction-based security}, a.k.a. \emph{provable security}, is the state-of-the-art method of understanding and confirming the security of cryptographic constructions based on well-studied assumptions. Concretely, a reduction proof reduces the security of a cryptographic construction (in a model) to the security of the underlying building blocks (in a model). Writing reductions, arguing about their soundness and verifying one's own (or someone else's) proof is relatively easy in some contexts, but it can get out of hand when constructions become complex. Thus, the community develops methods to tame the complexity of security proofs and to increase their precision, including, e.g., \emph{game-hopping}~\cite{EPRINT:Shoup04}, \emph{code-based} arguments~\cite{EC:BelRog06} as well as composition frameworks such as Universal Composability (UC~\cite{FOCS:Canetti01}), Constructive Cryptography (CC~\cite{FC:Maurer10}) and state-separating proofs (SSPs~\cite{X}) and a general culture of using black-box security notions as intermediate abstractions.
+%The paradigm of \emph{reduction-based security}, a.k.a. \emph{provable security}, is the state-of-the-art method of understanding and confirming the security of cryptographic constructions based on well-studied assumptions. Concretely, 
+A reduction proof reduces the security of a cryptographic construction (in a model) to the security of the underlying building blocks (in a model). Writing reductions, arguing about their soundness and verifying one's own (or someone else's) proof is relatively easy in some contexts, but it can get out of hand when constructions and security arguments become complex. Thus, the community develops methods to tame the complexity of security proofs and to increase their precision, including, e.g., \emph{game-hopping}~\cite{EPRINT:Shoup04}, \emph{code-based} arguments~\cite{EC:BelRog06} as well as composition frameworks such as Universal Composability (UC~\cite{FOCS:Canetti01}), Constructive Cryptography (CC~\cite{FC:Maurer10}) and state-separating proofs (SSPs~\cite{X}) and a general culture of using black-box security notions as intermediate abstractions.
 
-An
+A further, complementary approach supports mathematicians in their proof verification endeavour
+using computer assistance. Formal computer-verification of one's sequences of game-hops and reduction proofs certainly provides additional guarantees. However, Halevi~\cite{X}, in his position paper, was hoping for significantly more: Proof-assisting algorithms, so he hoped, could \emph{reduce} the overall amount of required work, especially \emph{verifying} the soundness of reductions (which he viewed as tedious) while \emph{designing} reductions (which he viewed as creative) remains in the hands of humans.
 
-Nevertheless, it is sometimes desirable to formally verify one's sequences of game-hops and reduction proofs. One the other hand, this verification should not require additional work on top of the written pen-and-paper proof, but rather, it would be desirable to \emph{reduce} the amount of overall required work and discharge some amount of work to a computer. At least, this is how Halevi imagined this process in his position paper~\cite{X}, and indeed, his vision is very appealing. Unfortunately, the pioneer works in the domain of formal verification of cryptographic reductions, CertiCrypt~\cite{X} and its follow-up work EasyCrypt~\cite{X}, require a significant additional amount of work (see Section~\ref{X} for details) compared to a pen-and-paper-only proof. Thus, while originally, it seemed plausible that EasyCrypt would be rather widely adopted by cryptographers~\cite[page 1]{X}, the additional required work still constitute a significant barrier.
+%Nevertheless, it is sometimes desirable to formally verify one's sequences of game-hops and reduction proofs. One the other hand, this verification should not require additional work on top of the written pen-and-paper proof, but rather, it would be desirable to \emph{reduce} the amount of overall required work and discharge some amount of work to a computer. At least, this is how Halevi imagined this process in his position paper~\cite{X}, and indeed, his vision is very appealing. 
+
+Inspired by Halevi~\cite{X}, Shoup~\cite{EPRINT:Shoup04}, and Bellare-Rogaway~\cite{EC:BelRog06},
+CertiCrypt~\cite{X} and its follow-up work EasyCrypt~\cite{X} pioneered the development of formal
+verification tools specifically aimed at cryptographic reduction proofs, so cryptographers would
+ be able to write and analyze pseudo-code directly in a tailor-made tool for cryptography rather 
+than encode their constructions and reductions into generic formal verification methods. 
+Unfortunately, EasyCrypt proofs nevertheless
+require a significant additional amount of work (see Section~\ref{X} for details) compared to a pen-and-paper-only proof. Thus, while originally, it seemed plausible that EasyCrypt would be rather widely adopted by cryptographers~\cite[page 1]{X}, the additional required work still constitute a significant barrier.
 
 Thus, we set out to reduce this barrier. However, rather than aiming for the same expressiveness and power as EasyCrypt, we target only a subset of cryptographic reductions, known as \emph{straightline reductions} for distinguishing games, where the reduction only runs the adversary once and returns whichever bit the adversary returns. Moreover, we require that the reduction \emph{perfectly} emulates the game(s) which the adversary expects. Such proofs are, e.g., very common in key exchange analysis, see, e.g.~\cite{X} for an example\footnote{The only exception in the cited papers are the proof steps where the game aborts upon nonce collisions. In our framework, such an abort step can be integrated as an assumption (rather than be proven in the tool).}. In this more restricted setting, we show that,
 indeed, only a much smaller amount of addition manual work is required compared to EasyCrypt. Section~\ref{sec:easycrypt} reviews EasyCrypt, Section~\ref{sec:ssbee} presents our new formal verification tool SSBee and Section~\ref{sec:casestudies} discusses case studies.
